# dynareadout_python

./: .gitignore  .gitmodules  MANIFEST.in  README.md  build-manylinux.sh  build.sh  pyproject.toml  setup.py
.github/workflows/: push.yml  tag.yml
src/: setup.py
src/dynareadout/: __init__.py
