[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynareadout"
version = "4.0"
authors = [
  { name = "PucklaJ", email = "jonaas.pucher000000@gmail.com"},
]
description = "An Ansi C library"
readme = "src/dynareadout/README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PucklaJ/dynareadout"
"Bug Trackers" = "https://github.com/PucklaJ/dynareadout/issues"
