[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dynareadout"
version = "23.01.1"
authors = [
  { name = "PucklaJ", email = "jonaas.pucher000000@gmail.com"},
]
description = "Ansi C library for parsing binary output files of LS Dyna (d3plot, binout) with bindings for python"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: C",
  "Programming Language :: C++",
  "License :: OSI Approved :: zlib/libpng License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "lsst-utils"
]

[project.urls]
"Homepage" = "https://github.com/PucklaJ/dynareadout"
"Bug Trackers" = "https://github.com/PucklaJ/dynareadout/issues"
